começo da criação do toolbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div>
             <img class="foto"
-                src="https://media.discordapp.net/attachments/724064373361868840/779440577174962176/fotoPerfil.png">
+                src="https://media.discordapp.net/attachments/724064373361868840/779440577174962176/fotoPerfil.png" alt="foto de perfil">
         </div>
 
         <div class="nome">
