--- a/index.html
+++ b/index.html
@@ -13,33 +13,32 @@
 
 </head>
 
-<body>
-    
-    <div class="containerToolbar">
-        <input type="checkbox" id="check">
-        <label id="icone" for="check">
-            <img alt="icone hamburguer"class="hamburguer" src="imagens/icone.png">
-        </label>
+<header class="containerToolbar">
+    <input type="checkbox" id="check">
+    <label id="icone" for="check">
+        <img alt="icone hamburguer"class="hamburguer" src="imagens/icone.png">
+    </label>
 
-        <div class="toolbar">
-            <nav>
-                <a href="index.html">
-                    <div class="link">Home</div>
-                </a>
-                <a href="">
-                    <div class="link">Em construção</div>
-                </a>
-                <a href="">
-                    <div class="link">Em construção</div>
-                </a>
-                <a href="">
-                    <div class="link">Em construção</div>
-                </a>
-            </nav>
+    <div class="toolbar">
+        <nav>
+            <a href="index.html">
+                <div class="link">Home</div>
+            </a>
+            <a href="">
+                <div class="link">Em construção</div>
+            </a>
+            <a href="">
+                <div class="link">Em construção</div>
+            </a>
+            <a href="">
+                <div class="link">Em construção</div>
+            </a>
+        </nav>
 
-        </div>
     </div>
+</header>
 
+<body>
     <div class="conteudo">
         <div class="container">
             <div>
